--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <packaging>pom</packaging>
     <version>${global.version}</version>
     <modules>
-
+        <module>service-api</module>
     </modules>
 
     <parent>
@@ -21,11 +21,13 @@
 
 
     <properties>
+        <global.version>1.0-SNAPSHOT</global.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
-        <global.version>1.0-SNAPSHOT</global.version>
+        <spring.boot.version>2.0.3.RELEASE</spring.boot.version>
+        <lombok.versio>1.16.18</lombok.versio>
     </properties>
 
     <dependencies>
@@ -38,8 +40,10 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.16.18</version>
+            <version>${lombok.versio}</version>
         </dependency>
+
+
 
     </dependencies>
 
@@ -49,6 +53,13 @@
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
                 <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring.boot.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
